objects/Addresses__c.object
<CustomObject>
    <fields>
        <fullName>AX_Location_ID__c</fullName>
        <externalId>true</externalId>
        <label>AX Location ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>More_Addresses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR 3</booleanFilter>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <value>&quot;&quot;</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Addresses (Billing Contact)</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Broker_Name__c</fullName>
        <description>Required for international shipping</description>
        <inlineHelpText>Required for international shipping</inlineHelpText>
        <label>Broker Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Number__c</fullName>
        <description>Required for international shipping</description>
        <inlineHelpText>Required for international shipping</inlineHelpText>
        <label>Broker Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Region__c</fullName>
        <description>for use when an address has been copied from the account and does not match one of our valid state-country selections</description>
        <inlineHelpText>for use when an address has been copied from the account and does not match one of our valid state-country selections</inlineHelpText>
        <label>Country/Region</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the country custom object</description>
        <inlineHelpText>Lookup to the country custom object</inlineHelpText>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Full_Address__c</fullName>
        <formula>Street__c + IF( LEN( Street__c) &gt; 0, BR(),&quot;&quot;) +
 City__c + IF( LEN(City__c) &gt; 0, &quot;, &quot;,&quot;&quot;) +
 State__r.ISO_Code__c + &quot; &quot; +  ZIP_Postal_Code__c + BR() +
 Country__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Golden_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by Cloudingo to merge all of the duplicates to the Golden record that exists in MDM. This will not appear on any layouts.</description>
        <label>Golden Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean formula field that returns true when the address has a valid state (lookup) and country (lookup) selection</description>
        <inlineHelpText>Boolean formula field that returns true when the address has a valid state (lookup) and country (lookup) selection</inlineHelpText>
        <label>Is Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean formula field that returns true when the address has a non-null AX ID and the last modified date time is less than the last synced date time</description>
        <inlineHelpText>Boolean formula field that returns true when the address has a non-null AX ID and the last modified date time is less than the last synced date time</inlineHelpText>
        <label>Is Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Synced__c</fullName>
        <description>Date time field that is set by the sync after it has successfully synced down to AX.</description>
        <inlineHelpText>Date time field that is set by the sync after it has successfully synced down to AX.</inlineHelpText>
        <label>Last Synced</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LegacyAddressId__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Address Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <description>Defines the legal name of the company that this address is associated with.</description>
        <label>Legal Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>&quot;Organizations provide a consistent way to group related Accounts such as Kohl&apos;s and Kohl&apos;s - CaaS&quot;</description>
        <label>Organization</label>
        <referenceTo>Organization__c</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PCA_Country_ISO_Code__c</fullName>
        <label>Country ISO Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCA_Province_ISO_Code__c</fullName>
        <label>Province Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping Contact</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Contact.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <value>&quot;&quot;</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Addresses (Shipping Contact)</relationshipLabel>
        <relationshipName>Addresses1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <description>for use when an address has been copied from the account and does not match one of our valid state-country selections</description>
        <inlineHelpText>for use when an address has been copied from the account and does not match one of our valid state-country selections</inlineHelpText>
        <label>State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the state custom object</description>
        <inlineHelpText>Lookup to the state custom object</inlineHelpText>
        <label>State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
                <value>
                    <fullName>Destination</fullName>
                </value>
                <value>
                    <fullName>Other Billing</fullName>
                </value>
                <value>
                    <fullName>Other Shipping</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VAT_Number__c</fullName>
        <description>EIN number for US customers; Value Added Tax (VAT) or other tax identification number for other customers</description>
        <inlineHelpText>EIN number for US customers; Value Added Tax (VAT) or other tax identification number for other customers</inlineHelpText>
        <label>VAT Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZIP_Postal_Code__c</fullName>
        <label>ZIP/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Addresses</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Address_Update_Restrictions</fullName>
        <active>true</active>
        <description>Address can only be updated by Rev Rec or SOP users</description>
        <errorConditionFormula>ISPICKVAL( Account__r.Type, &apos;Customer&apos;) &amp;&amp;  $UserRole.Id &lt;&gt; &apos;00EE0000000JycI&apos; &amp;&amp; $UserRole.Id &lt;&gt; &apos;00EE0000000YDKB&apos; &amp;&amp; $User.ProfileId &lt;&gt; &apos;00eE0000000XLCh&apos; &amp;&amp; $User.ProfileId &lt;&gt; &apos;00eE0000000cyS4&apos; &amp;&amp; $User.Id &lt;&gt; &apos;005E0000000dLxx&apos; &amp;&amp;  $User.Is_Partner__c = False &amp;&amp; INCLUDES( Type__c , &apos;Billing&apos;)  &amp;&amp;
 OR( ISCHANGED( Street__c ), ISCHANGED( City__c ), ISCHANGED( State_Province__c), ISCHANGED( ZIP_Postal_Code__c ) , ISCHANGED( Country_Region__c ) )</errorConditionFormula>
        <errorMessage>Only Finance Customer Service can update the main billing address.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Billing_Contact_Required</fullName>
        <active>true</active>
        <description>Billing Contact is required when type is Billing or Other Billing</description>
        <errorConditionFormula>OR(Account__r.RecordType.DeveloperName  = &apos;Customer_Type&apos;, Account__r.RecordType.DeveloperName = &apos;Sales_Type&apos;) 
&amp;&amp; $User.ProfileId &lt;&gt; &apos;00eE0000000cyS4&apos;&amp;&amp; $User.ProfileId &lt;&gt; &apos;00eE0000000XLCh&apos; &amp;&amp; $User.UserRoleId &lt;&gt; &apos;00EE0000000JycIMAS&apos;
&amp;&amp; (TEXT(Account__r.Account_Creation_Status__c) &lt;&gt; &apos;In Progress&apos;) 
&amp;&amp; OR(INCLUDES(Type__c,&apos;Billing&apos;),INCLUDES(Type__c,&apos;Other Billing&apos;)) 
&amp;&amp; ISBLANK( Billing_Contact__c )
&amp;&amp; Account__r.Is_Owner_Partner__c &lt;&gt; true</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>Billing Contact is required when address type is Billing or Other Billing</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Inactive_Billing_Address</fullName>
        <active>true</active>
        <description>The billing address cannot be made inactive.</description>
        <errorConditionFormula>$Profile.Name != &apos;System Administrator&apos; &amp;&amp; INCLUDES( Type__c , &apos;Billing&apos;) &amp;&amp; Active__c = false</errorConditionFormula>
        <errorMessage>The Billing Address cannot be deactivated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Inactive_Shipping_Address</fullName>
        <active>true</active>
        <description>The shipping address cannot be made inactive.</description>
        <errorConditionFormula>$Profile.Name != &apos;System Administrator&apos; &amp;&amp; INCLUDES( Type__c , &apos;Shipping&apos;) &amp;&amp; Active__c = false</errorConditionFormula>
        <errorMessage>The Shipping Address cannot be deactivated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Shipping_Contact_Required</fullName>
        <active>true</active>
        <description>Shipping contact is required when type is Shipping or Other Shipping</description>
        <errorConditionFormula>OR(Account__r.RecordType.DeveloperName  = &apos;Customer_Type&apos;, Account__r.RecordType.DeveloperName = &apos;Sales_Type&apos;) 
&amp;&amp; $User.ProfileId &lt;&gt; &apos;00eE0000000cyS4&apos;&amp;&amp; $User.ProfileId &lt;&gt; &apos;00eE0000000XLCh&apos; &amp;&amp; $User.UserRoleId &lt;&gt; &apos;00EE0000000JycIMAS&apos;
&amp;&amp; TEXT( Account__r.Account_Creation_Status__c) &lt;&gt; &apos;In Progress&apos; 
&amp;&amp; OR(INCLUDES(Type__c,&apos;Shipping&apos;),INCLUDES(Type__c,&apos;Other Shipping&apos;)) 
&amp;&amp; ISBLANK( Shipping_Contact__c )</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>Shipping Contact is required when address type is Shipping or Other Shipping.</errorMessage>
    </validationRules>
</CustomObject>